--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "@element-plus/icons-vue": "^2.0.10",
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.2.1",
+    "echarts": "^5.4.1",
+    "lodash-es": "^4.17.21",
     "element-plus": "^2.2.27",
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
+    "vue-echarts": "latest",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -29,8 +34,11 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "color": "^4.2.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
