--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "admin",
   "version": "0.0.0",
   "private": true,
+  "lint-staged": {
+    "src/**/*.{js,ts,vue}": [
+      "eslint --fix",
+      "git add ."
+    ]
+  },
   "scripts": {
+    "tsc": "vue-tsc --noEmit --skipLibCheck",
+    "prepare": "husky install",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
@@ -16,8 +24,8 @@
     "ant-design-vue": "^3.2.15",
     "axios": "^1.2.1",
     "echarts": "^5.4.1",
-    "lodash-es": "^4.17.21",
     "element-plus": "^2.2.27",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
@@ -25,6 +33,8 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
@@ -37,8 +47,10 @@
     "color": "^4.2.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lint-staged": "^13.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
