--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "ant-design-vue": "^3.2.15",
     "axios": "^1.2.1",
     "echarts": "^5.4.1",
-    "element-plus": "^2.2.27",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
     "vue-echarts": "latest",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
