--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
     "env.d.ts",
     "src/**/*",
-    "src/**/*.vue",
     "types"
   ],
   "compilerOptions": {
+    "lib": [
+      "ES2022",
+      "DOM"
+    ],
     "baseUrl": ".",
     "paths": {
       // 解决找不到模块
@@ -14,7 +21,7 @@
         "node_modules/vue-echarts/"
       ],
       "vue": [
-        "node_modules/vue"
+        "node_modules/*"
       ],
       "vue-router": [
         "node_modules/vue-router"
