--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     ]
   },
   "scripts": {
+    "dev": "vite serve --mode development",
+    "build:dev": "vue-tsc && vite build --mode development",
+    "build:prod": "vite build --mode production &&vue-tsc --noEmit",
+    "build:test": "vite build --mode test &&vue-tsc --noEmit",
     "tsc": "vue-tsc --noEmit --skipLibCheck",
     "prepare": "husky install",
-    "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
