feat: 优化项目,配置pinia持久化插件

--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,5 @@ VITE_APP_TITLE='xxx'
 VITE_APP_PORT=3000
 VITE_APP_BASE_API='/api'
 # 开发接口环境可自定义
-VITE_API_URL='https://mock.apifox.cn/m1/2120640-0-2c46b26a'
+#VITE_API_URL='https://mock.apifox.cn/m1/2120640-0-2c46b26a'
+VITE_API_URL='http://localhost:8090'
