--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
+    "js-cookie": "^3.0.4",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
     "vue-echarts": "latest",
@@ -60,6 +62,7 @@
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
+    "vue-style-loader": "^4.1.3",
     "vue-tsc": "^1.0.12"
   }
 }
