feat: 添加国际化

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,11 @@
+###
+ # @Author: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
+ # @Date: 2023-05-05 21:02:27
+ # @LastEditors: error: error: git config user.name & please set dead value or install git && error: git config user.email & please set dead value or install git & please set dead value or install git
+ # @LastEditTime: 2023-05-05 21:40:21
+ # @FilePath: \newest-admin\.env.development
+ # @Description: 
+### 
 ## 开发环境
 #NODE_ENV='development'
 # 变量必须以 VITE_ 为前缀才能暴露给外部读取
@@ -5,5 +13,5 @@ VITE_APP_TITLE='xxx'
 VITE_APP_PORT=3000
 VITE_APP_BASE_API='/api'
 # 开发接口环境可自定义
-#VITE_API_URL='https://mock.apifox.cn/m1/2120640-0-2c46b26a'
-VITE_API_URL='http://localhost:8090'
+VITE_API_URL='https://mock.apifox.cn/m1/2120640-0-2c46b26a'
+# VITE_API_URL='http://localhost:8090'
