--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.57.1",
     "vue": "^3.2.45",
     "vue-echarts": "latest",
+    "vue-i18n": "9.3.0-beta.17",
     "vue-router": "^4.1.6",
     "vuedraggable": "^2.24.3"
   },
