refactor: ✨ 项目重构/优化

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.4",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.45",
