--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@vueuse/core": "^10.1.2",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
